Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21454

Show actual mismatching values in mismatch error messages from row_import::match_table_columns()

    XMLWordPrintable

Details

    Description

      When doing an ALTER TABLE ... IMPORT, InnoDB checks for a number of potential type mismatches between the local table definition, and those from the imported table.

      When finding a mismatch it prevents the import, and logs a mismatch error message, but these messages do not contain actual value, so one can see that there was a mismatch of some sort, but not what the actual mismatching values on either side were.

      Attachments

        Issue Links

          Activity

            People

              hholzgra Hartmut Holzgraefe
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 40m
                  40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.